--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
+.nav {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 0.2rem 0;
+  width: auto;
+  color: #67a799;
+  border-bottom: 0.1px solid #67a799;
+  background-color: rgba(105, 103, 115, 0.3);
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.nav-item {
+  font-size: 1.2rem;
+  font-weight: 600;
+  font-family: monospace;
+  margin: 0 25px;
+  list-style: none;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -18,7 +43,7 @@ body {
 .home-container {
   display: flex;
   flex-direction: row;
-  margin: 15% auto;
+  margin: 10% auto;
   width: 55%;
 }
 
@@ -85,6 +110,7 @@ body {
   padding: 0.6rem 0.4rem 0.1rem 0.4rem;
   border-radius: 50%;
   border: #67a799 solid 1px;
+  background-color: rgba(105, 103, 115, 0.3);
   width: 40px;
   height: 40px;
   margin: 8px 0 0 0;
