--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0 auto;
+  position: fixed;
+  right: 7rem;
+  top: 1rem;
 }
 
 .nav-item {
@@ -77,7 +79,7 @@ body {
 .home-container {
   display: flex;
   flex-direction: row;
-  margin: 10% auto;
+  margin: 5% auto;
   width: 40%;
 }
 
@@ -86,7 +88,7 @@ body {
 }
 
 .home-content {
-  padding: 2.5rem;
+  padding: 1.5rem 2.5rem;
   color: #fffbfb;
 }
 
@@ -135,7 +137,7 @@ body {
   font-family: 'Roboto Mono', monospace;
 }
 
-.home-content > h6 {
+.home-content > h5, .home-content > p {
   color: #9bc0b8;
 }
 
@@ -202,38 +204,218 @@ body {
 }
 
 .recommendation {
-  width: 40%;
-  height: auto;
-  margin: 2rem 3rem 2rem 0;
+  width: 81%;
+  background-color: rgba(255, 251, 251, 0.6);/* rgba(255, 251, 251, 0.7); */
+  color: #3f3f3f;
+  margin: 0.5rem auto 0 auto;
+  border: 2px solid #67a799;
+  border-radius: 20px;
+  padding: 5px;
 }
 
 .slider-container {
-  height: 390px;
-
-  /* border: 2px solid  #67a799; */
-  border-radius: 20px;
-  padding: 1rem 1.5rem;
-  margin: auto 0;
-
-  /* background-color: rgba(103, 167, 153, 0.3); */
+  height: 185px;
+  margin: 0 auto;
 }
 
 .letter {
   width: auto;
-  height: 350px;
+  height: 100%;
   margin: 0 auto;
 }
 
+.recomand-header > h4 {
+  color: #212121;
+}
+
 .recomend-img {
-  width: 75px;
-  height: 75px;
+  width: 65px;
+  height: 65px;
+  filter: grayscale(0.5);
+  margin: 5px 0 0 0;
 }
 
 .reco-letter {
-  font-size: 1.1rem;
+  height: auto;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #212121;
+  margin: -15px 0 0 0;
+}
+
+.qoute {
+  color: #000;
 }
 
 .slider-control-centerright,
 .slider-control-centerleft {
   display: none;
+}
+
+.about-me {
+  width: 80%;
+  margin: 1.5rem auto 0.5rem auto;
+}
+
+.intro-dev {
+  width: 60%;
+  font-size: 1.2rem;
+  margin: 0.8rem 0.3rem 0 0.3rem;
+}
+
+.intro-dev > img {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 75px;
+  filter: grayscale(0.4);
+  border-radius: 50%;
+}
+
+.wave {
+  color: #bdeae0;
+  font-size: 1.4rem;
+  animation-name: wave;
+  animation-duration: 1s;
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  10% {
+    font-size: 2rem;
+    transform: rotate(15deg), scale(1.2, 1.2);
+  }
+
+  20% {
+    font-size: 2rem;
+    transform: rotate(-15deg);
+  }
+
+  30% {
+    font-size: 2rem;
+    transform: rotate(15deg);
+  }
+
+  40% {
+    font-size: 2rem;
+    transform: rotate(-15deg);
+  }
+
+  50% {
+    font-size: 2rem;
+    transform: rotate(15deg);
+  }
+
+  60% {
+    font-size: 2rem;
+    transform: rotate(-15deg);
+  }
+
+  70% {
+    font-size: 2rem;
+    transform: rotate(15deg);
+  }
+
+  80% {
+    font-size: 2rem;
+    transform: rotate(-15deg);
+  }
+
+  90% {
+    font-size: 2rem;
+    transform: rotate(15deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.name {
+  font-size: 1.6rem;
+  color: #bdeae0;
+}
+
+.contact-link,
+.resume {
+  color: #e1c153;
+  font-weight: 700;
+}
+
+.contact-link:hover,
+.resume:hover {
+  color: #e1c153;
+  font-style: italic;
+  transform: scale(1.2, 1.2); 
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 2rem;
+  margin: 1.5rem 2rem;
+}
+
+.git {
+  color: #e84d31;
+}
+
+.html {
+  color: #f75421;
+}
+
+.css {
+  color: #1f8ee7;
+}
+
+.js {
+  color: #eeb62b;
+}
+
+.webpack {
+  color: #1b72b6;
+}
+
+.react {
+  color: #00cdf2;
+}
+
+.redux {
+  color: #7853b8;
+}
+
+.bootstrap {
+  color: #593879;
+}
+
+.jest {
+  color: #913f56;
+}
+
+.ruby {
+  color: #a81105;
+}
+
+.rails {
+  color: #c20000;
+}
+
+.rspec {
+  color: #f12e66;
+}
+
+.postgresql {
+  color: #30628a;
+}
+
+.mysql {
+  color: #7292ac;
+  font-size: 3rem;
+  margin: -17px 0 0 5px;
 }
