--- a/src/App.css
+++ b/src/App.css
@@ -104,8 +104,9 @@ body {
   font-style: italic;
   font-size: 3rem;
   animation-name: anime;
-  animation-duration: 60s;
+  animation-duration: 45s;
   animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes anime {
@@ -198,12 +199,9 @@ body {
   color: #67a799;
 }
 
-.linkedin-about > a:hover {
-  color: #0b66c3;
-}
-
+.linkedin-about > a:hover,
 .github-about > a:hover {
-  color: #9f9f9f;
+  color: #fffbfb;
 }
 
 .medium:hover {
@@ -303,12 +301,12 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   height: 75px;
-  filter: grayscale(0.5);
+  filter: grayscale(0.2);
   border-radius: 50%;
 }
 
 .contact-link {
-  animation-duration: 4s;
+  animation-duration: 3s;
 }
 
 .resume {
@@ -320,6 +318,7 @@ body {
   font-weight: 700;
   animation-name: cv;
   animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes cv {
@@ -348,59 +347,248 @@ body {
 }
 
 .git {
-  color: #e84d31;
+  animation-name: git;
+  animation-duration: 1.4s, 5s, 1s;
+}
+
+@keyframes git {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #e84d31;
+    transform: scale(1.2);
+  }
 }
 
 .html {
-  color: #f75421;
+  animation-name: html;
+  animation-duration: 1.5s, 5s, 1s;
+}
+
+@keyframes html {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #f75421;
+    transform: scale(1.2);
+  }
 }
 
 .css {
-  color: #1f8ee7;
+  animation-name: css;
+  animation-duration: 1.6s, 5s, 1s;
+}
+
+@keyframes css {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #1f8ee7;
+    transform: scale(1.2);
+  }
 }
 
 .js {
-  color: #eeb62b;
+  animation-name: js;
+  animation-duration: 1.7s, 5s, 1s;
+}
+
+@keyframes js {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #eeb62b;
+    transform: scale(1.2);
+  }
 }
 
 .webpack {
-  color: #1b72b6;
+  animation-name: webpack;
+  animation-duration: 1.8s, 5s, 1s;
+  padding-left: 5px;
+}
+
+@keyframes webpack {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #1b72b6;
+    transform: scale(1.2);
+  }
 }
 
 .react {
-  color: #00cdf2;
+  animation-name: react;
+  animation-duration: 1.9s, 5s, 1.1s;
+}
+
+@keyframes react {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #00cdf2;
+    transform: scale(1.2);
+  }
 }
 
 .redux {
-  color: #7853b8;
+  animation-name: redux;
+  animation-duration: 2s, 5s, 1.1s;
+}
+
+@keyframes redux {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #7853b8;
+    transform: scale(1.2);
+  }
 }
 
 .bootstrap {
-  color: #593879;
+  animation-name: bootstrap;
+  animation-duration: 2.1s, 5s, 1.1s;
+}
+
+@keyframes bootstrap {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #593879;
+    transform: scale(1.2);
+  }
 }
 
 .jest {
-  color: #913f56;
+  animation-name: jest;
+  animation-duration: 2.2s, 5s, 1.1s;
+}
+
+@keyframes jest {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #913f56;
+    transform: scale(1.2);
+  }
 }
 
 .ruby {
-  color: #a81105;
+  padding-left: 5px;
+  animation-name: ruby;
+  animation-duration: 2.3s, 5s, 1.1s;
+}
+
+@keyframes ruby {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #a81105;
+    transform: scale(1.2);
+  }
 }
 
 .rails {
-  color: #c20000;
   font-size: 3rem;
   margin: -17px 0 0 5px;
+  animation-name: rails;
+  animation-duration: 2.4s, 5s, 1.2s;
+}
+
+@keyframes rails {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #c20000;
+    transform: scale(1.2);
+  }
 }
 
 .postgresql {
-  color: #30628a;
+  animation-name: postgresql;
+  animation-duration: 2.5s, 5s, 1.2s;
+}
+
+@keyframes postgresql {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #30628a;
+    transform: scale(1.2);
+  }
 }
 
 .mysql {
-  color: #7292ac;
   font-size: 3rem;
+  padding-left: 5px;
   margin: -17px 0 0 5px;
+  animation-name: redux;
+  animation-duration: 2.6s, 5s, 1.2s;
+}
+
+@keyframes mysql {
+  from {
+    color: #fffbfb;
+    transform: scale(1);
+  }
+
+  to {
+    color: #7292ac;
+    transform: scale(1.2);
+  }
+}
+
+.git,
+.html,
+.css,
+.js,
+.webpack,
+.react,
+.redux,
+.bootstrap,
+.jest,
+.ruby,
+.rails,
+.postgresql,
+.mysql {
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 .contact-container {
@@ -451,6 +639,10 @@ body {
   margin: 0 -10rem;
 }
 
+.arrow:hover {
+  transform: scale(1.1);
+}
+
 .card {
   height: 400px;
   width: -moz-fit-content;
@@ -466,6 +658,10 @@ body {
   margin: 1px;
   border: 1px solid #3f3f3f;
   border-radius: 19px;
+}
+
+.card-img-top:hover {
+  transform: scale(1.008);
 }
 
 .card-btns {
