--- a/src/App.css
+++ b/src/App.css
@@ -219,15 +219,16 @@ body {
 
 .about {
   color: #fffbfb;
-  margin: 1.5rem auto;
-  width: 90%;
+  margin: 0.5rem auto;
+  width: 60%;
 }
 
 .recommendation {
-  width: 90%;
+  width: 100%;
+  height: 230px;
   background-color: rgba(255, 251, 251, 0.6);/* rgba(255, 251, 251, 0.7); */
   color: #3f3f3f;
-  margin: 0 auto;
+  margin: 0 0 0 1.2rem;
   border: 2px solid #67a799;
   border-radius: 20px;
   padding: 5px;
@@ -240,6 +241,10 @@ body {
 
 .slider-container {
   height: 100%;
+}
+
+.slider-container > div {
+  height: 230px;
 }
 
 .letter {
@@ -288,13 +293,13 @@ body {
 .about-me {
   width: 90%;
   height: auto;
-  margin: 0 auto;
+  margin: 0.5rem auto;
 }
 
 .intro-dev {
-  width: 60%;
+  width: 100%;
   font-size: 1.2rem;
-  margin: 0.8rem 0.3rem 0 0.3rem;
+  margin: 0.6rem 0.3rem -0.3rem 0.3rem;
 }
 
 .dev-img {
