--- a/src/App.css
+++ b/src/App.css
@@ -345,8 +345,7 @@ body {
   border-radius: 20px;
   padding: 15px;
   margin: 4rem auto 1rem auto;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 25%;
   height: 50%;
   font-size: 1.6rem;
   text-align: center;
@@ -367,6 +366,10 @@ body {
   margin: 0 8em 0 0;
 }
 
+.box-title > div {
+
+}
+
 .skills {
   font-size: 1.8rem;
   width: auto;
@@ -375,7 +378,7 @@ body {
 
 .skills-list {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
 }
 
 .skills-list > div > span {
@@ -383,7 +386,7 @@ body {
 }
 
 .skills-list > div > span::first-letter {
-  text-transform:capitalize;
+  text-transform: capitalize;
 }
 
 .git {
@@ -431,12 +434,12 @@ body {
   }
 }
 
-.js {
-  animation-name: js;
+.javaScript {
+  animation-name: javaScript;
   animation-duration: 1.7s, 5s, 1s;
 }
 
-@keyframes js {
+@keyframes javaScript {
   from {
     color: #fffbfb;
   }
@@ -492,7 +495,7 @@ body {
   }
 }
 
-.bootstrap {
+.bootStrap {
   animation-name: bootstrap;
   animation-duration: 2.1s, 5s, 1.1s;
 }
@@ -574,8 +577,13 @@ body {
   font-size: 3rem;
   padding-left: 5px;
   margin: -17px 0 0 5px;
+  align-items: end;
   animation-name: redux;
   animation-duration: 2.6s, 5s, 1.2s;
+}
+
+.mysql > span {
+  padding: 10px 0 0 0;
 }
 
 @keyframes mysql {
@@ -591,20 +599,21 @@ body {
 .git,
 .html,
 .css,
-.js,
+.javaScript,
 .webpack,
 .react,
 .redux,
-.bootstrap,
+.bootStrap,
 .jest,
 .ruby,
 .rails,
 .postgresql,
 .mysql {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: auto;
   gap: 2px;
+  align-items: center;
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
@@ -724,13 +733,13 @@ body {
 .drop-btn {
   color: #67a799;
   background: none;
-  border: 1px solid #67a799;
-  border-radius: 20%;
+  border-bottom: 1px solid #67a799;
   text-decoration: none;
   font-size: 1.2rem;
 }
 
-.drop-btn:hover {
+.drop-btn:hover,
+.drop-btn:active {
   color: #000;
   background: #67a799;
   border: 1px solid;
