--- a/src/App.css
+++ b/src/App.css
@@ -378,7 +378,13 @@ body {
   grid-template-columns: auto auto;
 }
 
-.skills-list > div > span {
+.pro-skills-list {
+  display: grid;
+  grid-template-columns: auto;
+}
+
+.skills-list > div > span,
+.pro-skills-list > div > span {
   font-size: 1.1rem;
 }
 
@@ -571,10 +577,9 @@ body {
 
 .mysql {
   font-size: 3rem;
-  padding-left: 5px;
-  margin: -17px 0 0 5px;
+  margin: -17px 0 0 0;
   align-items: end;
-  animation-name: redux;
+  animation-name: mysql;
   animation-duration: 2.2s, 5s, 1.4s;
 }
 
@@ -592,6 +597,31 @@ body {
   }
 }
 
+.team {
+  animation-name: prof;
+  animation-duration: 1.6s, 5s, 1.1s;
+}
+
+.pair {
+  animation-name: prof;
+  animation-duration: 1.7s, 5s, 1.2s;
+}
+
+.remote {
+  animation-name: prof;
+  animation-duration: 1.8s, 5s, 1.3s;
+}
+
+@keyframes prof {
+  from {
+    color: #fffbfb;
+  }
+
+  to {
+    color: none;
+  }
+}
+
 .git,
 .html,
 .css,
@@ -604,7 +634,10 @@ body {
 .ruby,
 .rails,
 .postgresql,
-.mysql {
+.mysql,
+.team,
+.pair,
+.remote {
   display: flex;
   flex-direction: row;
   width: auto;
