--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
 .nav {
-  position: -webkit-sticky;
   position: sticky;
   z-index: 10;
   top: 0;
   padding: 0.2rem 0;
   width: auto;
   border-bottom: 1.5px solid #67a799;
-  background-color: rgba(63, 63, 63, 0.5);
+  background-color: rgb(63 63 63 / 50%);
 }
 
 .logo-img {
@@ -73,7 +72,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-image: url('https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+  background-image: url("https://images.pexels.com/photos/3473569/pexels-photo-3473569.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -98,7 +97,7 @@ body {
 
 .home-content > .greeting {
   font-size: 1.4rem;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 .name {
@@ -144,7 +143,7 @@ body {
 
 .home-content > .career {
   font-size: 1.8rem;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 .home-content > h5 {
@@ -161,10 +160,10 @@ body {
   font-size: 1.6rem;
   border-radius: 50%;
   border: #67a799 solid 1px;
-  background-color: rgba(105, 103, 115, 0.3);
+  background-color: rgb(105 103 115 / 30%);
   width: 45px;
   height: 45px;
-  margin: 6px 0 0 0;
+  margin: 6px 0 0;
 }
 
 .icon > a {
@@ -172,14 +171,14 @@ body {
   color: #fffbfb;
 }
 
-.linkedin:hover {
+.linked:hover {
   opacity: 1;
   border: #fffbfb solid 1px;
   background-color: #0b66c3;
   color: #fffbfb;
 }
 
-.twitter:hover {
+.twitt:hover {
   opacity: 1;
   border: #fffbfb solid 1px;
   background-color: #1da1f2;
@@ -230,7 +229,7 @@ body {
 .recommendation {
   width: 100%;
   height: 230px;
-  background-color: rgba(255, 251, 251, 0.6);/* rgba(255, 251, 251, 0.7); */
+  background-color: rgb(255 251 251 / 60%);/* rgba(255, 251, 251, 0.7); */
   color: #3f3f3f;
   margin: 0 0 0 1.2rem;
   border: 2px solid #67a799;
@@ -270,7 +269,7 @@ body {
   width: 65px;
   height: 65px;
   filter: grayscale(0.5);
-  margin: 5px 0 0 0;
+  margin: 5px 0 0;
 }
 
 .reco-letter {
@@ -278,7 +277,7 @@ body {
   font-size: 1rem;
   font-weight: 600;
   color: #212121;
-  margin: -15px 0 0 0;
+  margin: -15px 0 0;
 }
 
 .qoute {
@@ -308,13 +307,11 @@ body {
 .intro-dev {
   width: 100%;
   font-size: 1.2rem;
-  margin: 0.6rem 0.3rem -0.3rem 0.3rem;
+  margin: 0.6rem 0.3rem -0.3rem;
 }
 
 .dev-img {
-  -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
-  width: -moz-fit-content;
   width: fit-content;
   height: 75px;
   filter: grayscale(0.2);
@@ -353,7 +350,7 @@ body {
   border: 1px solid #67a799;
   border-radius: 20px;
   padding: 15px;
-  margin: 4rem auto 1rem auto;
+  margin: 4rem auto 1rem;
   width: 25%;
   height: 50%;
   font-size: 1.6rem;
@@ -361,7 +358,6 @@ body {
 }
 
 .box-title {
-  width: -moz-fit-content;
   width: fit-content;
   height: auto;
   color: #89cdbe;
@@ -383,11 +379,11 @@ body {
 }
 
 .mysql > span {
-  padding: 10px 0 0 0;
+  padding: 10px 0 0;
 }
 
 .rails > span {
-  padding: 5px 0 0 0;
+  padding: 5px 0 0;
 }
 
 .pro-skills-list {
@@ -449,12 +445,12 @@ body {
   }
 }
 
-.javaScript {
-  animation-name: javaScript;
+.javascript {
+  animation-name: javascript;
   animation-duration: 1.6s, 5s, 1.1s;
 }
 
-@keyframes javaScript {
+@keyframes javascript {
   from {
     color: #fffbfb;
   }
@@ -510,7 +506,7 @@ body {
   }
 }
 
-.bootStrap {
+.bootstrap {
   animation-name: bootstrap;
   animation-duration: 1.8s, 5s, 1.2s;
 }
@@ -589,7 +585,7 @@ body {
 
 .mysql {
   font-size: 3rem;
-  margin: -17px 0 0 0;
+  margin: -17px 0 0;
   align-items: end;
   animation-name: mysql;
   animation-duration: 2.2s, 5s, 1.4s;
@@ -633,11 +629,11 @@ body {
 .git,
 .html,
 .css,
-.javaScript,
+.javascript,
 .webpack,
 .react,
 .redux,
-.bootStrap,
+.bootstrap,
 .jest,
 .ruby,
 .rails,
@@ -685,7 +681,7 @@ body {
 }
 
 .form-icon {
-  margin: -5px 0 0 0;
+  margin: -5px 0 0;
 }
 
 .projects-container {
@@ -709,7 +705,6 @@ body {
 
 .card {
   height: 400px;
-  width: -moz-fit-content;
   width: fit-content;
   color: #245148;
   background: #fffbfb;
@@ -729,7 +724,6 @@ body {
 }
 
 .card-btns {
-  width: -moz-fit-content;
   width: fit-content;
   height: auto;
   gap: 5px;
@@ -759,7 +753,7 @@ body {
 
 .about-icon {
   font-size: 1.2rem;
-  margin: 0 2px 7px 2px;
+  margin: 0 2px 7px;
 }
 
 .collapse-container,
